--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -3,6 +3,8 @@
   "auth.register_success": "Registration successful",
   "auth.login_success": "Login successful (dummy)",
   "auth.user_not_found": "User not found",
+    "auth.invalid_password": "Invalid password",
+  "auth.email_exists": "Email already registered",
   "orders.list": "Order list",
   "orders.created": "Order created",
   "providers.list": "Provider list",
@@ -14,5 +16,15 @@
   "reviews.list": "Review list",
   "reviews.created": "Review saved",
   "validation.missing_fields": "The following fields are required: {{fields}}",
+  "validation.invalid_payload": "Request payload is invalid",
+  "validation.invalid_email": "Email must be valid",
+  "validation.password_requirement": "Password must be at least 8 characters long and include uppercase, lowercase, and numbers",
+  "validation.password_required": "Password is required",
+  "validation.email_required": "Email is required",
+  "validation.full_name_required": "Full name is required",
+  "validation.role_invalid": "These roles are invalid: {{roles}}",
+  "validation.active_role_invalid": "activeRole must be one of the provided roles",
+  "validation.phone_invalid": "Phone number must be 10-15 digits and may start with +",
+  "validation.invalid_coordinates": "Coordinates must be an array of [longitude, latitude]",
   "errors.internal": "An unexpected error occurred"
 }
