--- a/src/locales/id/translation.json
+++ b/src/locales/id/translation.json
@@ -3,6 +3,8 @@
   "auth.register_success": "Registrasi berhasil",
   "auth.login_success": "Login berhasil (dummy)",
   "auth.user_not_found": "Pengguna tidak ditemukan",
+  "auth.invalid_password": "Kata sandi tidak valid",
+  "auth.email_exists": "Email sudah terdaftar",
   "orders.list": "Daftar pesanan",
   "orders.created": "Pesanan dibuat",
   "providers.list": "Daftar penyedia layanan",
@@ -14,5 +16,15 @@
   "reviews.list": "Daftar ulasan",
   "reviews.created": "Ulasan tersimpan",
   "validation.missing_fields": "Field berikut wajib diisi: {{fields}}",
+  "validation.invalid_payload": "Data yang dikirim tidak valid",
+  "validation.invalid_email": "Email harus valid",
+  "validation.password_requirement": "Password minimal 8 karakter dan mengandung huruf besar, kecil, dan angka",
+  "validation.password_required": "Password wajib diisi",
+  "validation.email_required": "Email wajib diisi",
+  "validation.full_name_required": "Nama lengkap wajib diisi",
+  "validation.role_invalid": "Peran berikut tidak valid: {{roles}}",
+  "validation.active_role_invalid": "activeRole harus salah satu dari roles",
+  "validation.phone_invalid": "Nomor telepon harus 10-15 digit dan boleh diawali +",
+  "validation.invalid_coordinates": "Koordinat harus berupa array [longitude, latitude]",
   "errors.internal": "Terjadi kesalahan pada server"
 }
