--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -3,7 +3,9 @@
   "auth.register_success": "Registration successful",
   "auth.login_success": "Login successful (dummy)",
   "auth.user_not_found": "User not found",
-    "auth.invalid_password": "Invalid password",
+  "auth.invalid_password": "Invalid password",
+  "auth.unauthorized": "Authorization token is required",
+  "auth.invalid_token": "Invalid or expired token",
   "auth.email_exists": "Email already registered",
   "orders.list": "Order list",
   "orders.created": "Order created",
